--- a/flaskr/templates/input.html
+++ b/flaskr/templates/input.html
@@ -7,33 +7,41 @@
     <body>
         <!-- header -->
         <div class="row" style="background:#579a88; height: auto;">
-            <div class="col-1"></div>
-            <div class="col-5" style="align-items:center; padding: 10px;">
-                <img img src="../static/McGill-CS.png" width="auto" height="auto">
+            <div class="col-1 col-s-1"></div>
+            <div class="col-5 col-s-10" style="align-items:center; padding: 15px;">
+                <img align="left" img src="../static/McGill-CS.png" width="100%" height="auto">
             </div>
-            <div class="col-1"></div>
-            <div class="col-5" style="align-items:center; padding: 10px;">
-                <h1 style="color: white;">System Operator Tasks</h1>
+            <div class="col-5 hidden-small" style="align-items:center; padding: 10px;">
+                <h1 align="center" style="color: white;">System Operator Tasks</h1>
             </div>
+            <div class="col-1 col-s-1"></div>
+        </div>
+        <div class="row" style="background:#63ae9a; height: auto;">
+            <div class="hidden-large col-s-1"></div>
+            <div class="hidden-large col-s-10" style="align-items:center; padding: 10px;">
+                <h2 align="center" style="color: white;">System Operator Tasks</h2>
+            </div>
+            <div class="hidden-large col-s-1"></div>
         </div>
         <div class="row" style="background:#b2e1d4; height:auto">
-            <div class="col-1"></div>
-            <div class="col-10" style="align-items:center; padding: 10px;">
+            <div class="col-1 col-s-1"></div>
+            <div class="col-10 col-s-10" style="align-items:center; padding: 10px;">
                 <a href="{{ url_for('.usermanagement') }}"><font size="4"><b>Users&emsp;&emsp;</b></font></a>
                 <a href="{{ url_for('.importcsv') }}"><font size="4"><b>Import&emsp;&emsp;</b></font></a>
                 <a href="{{ url_for('.inputcourses') }}"><font size="4"><b>Input&emsp;&emsp;</b></font></a>
             </div>
+            <div class="col-1 col-s-1"></div>
         </div>
         <br>
 
         <!-- input profs and courses -->
         <div class="row" style="height:auto">
-            <div class="col-1"></div>
-            <div class="col-10"><h2>Manually Input Profs and Courses Info.</h2></div>
+            <div class="col-1 col-s-1"></div>
+            <div class="col-10 col-s-10"><h2>Manually Input Profs and Courses Info.</h2></div>
         </div>
         <div class="row" style="height:auto">
-            <div class="col-1"></div>
-            <div class="col-10">
+            <div class="col-1 col-s-1"></div>
+            <div class="col-10 col-s-10">
             <form method="POST">
                 <table border="0">
                     <tr>
@@ -63,8 +71,8 @@
         
         <!-- error and success messages -->
         <div class="row">
-            <div class="col-1"></div>
-            <div class="col-10">
+            <div class="col-1 col-s-1"></div>
+            <div class="col-10 col-s-10">
                 {% with messages = get_flashed_messages(with_categories=true) %}
                 {% if messages %}
                     <div class=flashes>
@@ -80,11 +88,11 @@
         <br><br><br>
         <!-- footer -->
         <div class="row footer">
-            <div class="col-1"></div>
-            <div class="col-7" style="padding-top: 15px;">
+            <div class="col-1 col-s-1"></div>
+            <div class="col-7 col-s-5" style="padding-top: 15px;">
                 <a><b>Back to Dashboard</b></a>
             </div>
-            <div class="col-3" style="align-items: center; padding: 10px;">
+            <div class="col-3 col-s-5" style="align-items: center; padding: 10px;">
                 <font color="#b2e1d4" size="2">
                     <div align="right">
                         Copyright @ 2022.<br>
