--- a/flaskr/static/style.css
+++ b/flaskr/static/style.css
@@ -26,11 +26,6 @@ a:hover{
     cursor: pointer;
 }
 
-.page{
-    display: none;
-}
-.page.active{ display: block;}
-
 
 .footer{
     background-color: #579a88;
@@ -39,9 +34,15 @@ a:hover{
     height: auto; 
     width: 99%;
 }
+/* .empty {
+    color : white;
+}
+.active {
+    color : red;
+} */
 
-@media only screen and (min-device-width: 480px) {
-    /* For desktop: */
+@media only screen and (min-width: 916px) {
+    /* For large page: */
     .col-1 {width: 8.33%;}
     .col-2 {width: 16.66%;}
     .col-3 {width: 25%;}
@@ -54,4 +55,21 @@ a:hover{
     .col-10 {width: 83.33%;}
     .col-11 {width: 91.66%;}
     .col-12 {width: 100%;}
+    .hidden-large {display: none;}
+}
+@media only screen and (max-width: 916px) {
+    /* For small page: */
+    .col-s-1 {width: 8.33%;}
+    .col-s-2 {width: 16.66%;}
+    .col-s-3 {width: 25%;}
+    .col-s-4 {width: 33.33%;}
+    .col-s-5 {width: 41.66%;}
+    .col-s-6 {width: 50%;}
+    .col-s-7 {width: 58.33%;}
+    .col-s-8 {width: 66.66%;}
+    .col-s-9 {width: 75%;}
+    .col-s-10 {width: 83.33%;}
+    .col-s-11 {width: 91.66%;}
+    .col-s-12 {width: 100%;}
+    .hidden-small {display: none;}
 }
