--- a/flaskr/static/style.css
+++ b/flaskr/static/style.css
@@ -81,52 +81,32 @@ a:hover {
   }
 }
 
-/* admin */
-.dropbtn {
-  background-color: #04aa6d;
-  color: white;
-  padding: 16px;
-  font-size: 16px;
-  border: none;
-  cursor: pointer;
-}
+/* info */
 
-.dropbtn:hover,
-.dropbtn:focus {
-  background-color: #3e8e41;
-}
+/* update */
+#updatetable {
+    border-collapse: collapse;
+    width: 100%;
+  }
+  
+  #updatetable td, #updatetable th {
+    border: 1px solid #ddd;
+    padding: 8px;
+  }
+  
+  #updatetable tr:nth-child(1){background-color: rgb(217, 217, 217) !important;}
 
-#myInput {
-  box-sizing: border-box;
-  background-image: url('searchicon.png');
-  background-position: 14px 12px;
-  background-repeat: no-repeat;
-  font-size: 16px;
-  padding: 14px 20px 12px 45px;
-  border: none;
-  border-bottom: 1px solid #ddd;
-}
+  #updatetable tr:nth-child(odd){background-color: #f2f2f2;}
+    
+  #updatetable th {
+    padding-top: 12px;
+    padding-bottom: 12px;
+    text-align: left;
+    font-weight: normal;
+  }
 
-#myInput:focus {
-  outline: 3px solid #ddd;
-}
+  #updateTA {
+      
+  }
 
-.dropdown {
-  position: relative;
-  display: inline-block;
-}
-
-.dropdown {
-  position: relative;
-  display: inline-block;
-}
-
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #f6f6f6;
-  min-width: 230px;
-  overflow: auto;
-  border: 1px solid #ddd;
-  z-index: 1;
-}
+/* adminimport */
