--- a/flaskr/templates/adminimport.html
+++ b/flaskr/templates/adminimport.html
@@ -23,55 +23,55 @@
     <div class="row" style="background:#b2e1d4; height:auto">
         <div class="col-1"></div>
         <div class="col-10" style="align-items:center; padding: 10px;">
-            <a href="{{ url_for('admin.update') }}"><font size="4"><b>TA/COURSE INFO&emsp;&emsp;</b></font></a>
-            <a href="{{ url_for('admin.info') }}"><font size="4"><b>UPDATE TA INFO&emsp;&emsp;</b></font></a>
-            <a href="{{ url_for('admin.adminimport') }}"><font size="4"><b>IMPORT&emsp;&emsp;</b></font></a>
+            <a href="{{ url_for('admin.update') }}">
+                <font size="4"><b>UPDATE TA INFO&emsp;&emsp;</b></font>
+            </a>
+            <a href="{{ url_for('admin.info') }}">
+                <font size="4"><b>TA/COURSE INFO<b>&emsp;&emsp;</b></font>
+            </a>
+            <a href="{{ url_for('admin.adminimport') }}">
+                <font size="4"><b>IMPORT&emsp;&emsp;</b></font>
+            </a>
         </div>
     </div>
 
     <!-- import -->
-    <div class="page" id="adminImport">
-        <!-- Course Quota -->
-        <div class="row">
-            <div class="col-1"></div>
-            <div class="col-10">
-                <h2>Import Course Quota. Please upload a .csv file.</h2>
-            </div>
-            <div class="col-1"></div>
+    <!-- Course Quota -->
+    <div class="row">
+        <div class="col-1"></div>
+        <div class="col-10">
+            <h2>Import Course Quota. Please upload a .csv file.</h2>
         </div>
-        <div class="row">
-            <div class="col-1"></div>
-            <div class="col-10">
-                <form method="POST" enctype="multipart/form-data">
-                <input type="file" name="fileUpload"/>
-                <input type="submit" name="submit" id="upload" value="Upload"/>
-                <div id="dvCSV"></div>
-            </div>
-        </div>
-        <!-- TA Cohort -->
-        <div class="row">
-            <div class="col-1"></div>
-            <div class="col-10">
-                <h2>Import TA Cohort. Please upload a .csv file.</h2>
-            </div>
-            <div class="col-1"></div>
-        </div>
-        <div class="row">
-            <div class="col-1"></div>
-            <div class="col-10">
-                <form method="POST" enctype="multipart/form-data">
-                <input type="file" name="fileUpload"/>
-                <input type="submit" name="submit" id="upload" value="Upload"/>
-                <div id="dvCSV"></div>
-            </div>
-        </div>
+        <div class="col-1"></div>
     </div>
-
-    <!-- TA info, course TA info & history -->
-
-    <!-- add/ remove TA -->
-    <!-- term_month_year, course_num, TA_name, student_ID, assigned_hours -->
-    
+    <div class="row">
+        <div class="col-1"></div>
+        <div class="col-10">
+            <form method="POST" enctype="multipart/form-data">
+                <input type="file" name="fileUpload" />
+                <input type="submit" name="submit" id="upload" value="Upload" />
+                <div id="dvCSV"></div>
+        </div>
+        <div class="col-1"></div>
+    </div>
+    <!-- TA Cohort -->
+    <div class="row">
+        <div class="col-1"></div>
+        <div class="col-10">
+            <h2>Import TA Cohort. Please upload a .csv file.</h2>
+        </div>
+        <div class="col-1"></div>
+    </div>
+    <div class="row">
+        <div class="col-1"></div>
+        <div class="col-10">
+            <form method="POST" enctype="multipart/form-data">
+                <input type="file" name="fileUpload" />
+                <input type="submit" name="submit" id="upload" value="Upload" />
+                <div id="dvCSV"></div>
+        </div>
+        <div class="col-1"></div>
+    </div>
 
     <!-- footer -->
     <div class="row footer">
@@ -87,23 +87,8 @@
                 </div>
             </font>
         </div>
+        <div class="col-1"></div>
     </div>
-
-    <script>
-        function hideAll() {
-            var elements = document.getElementsByClassName("page");
-            for (var i = 0; i < elements.length; i++) {
-                elements[i].style.display = "none";
-            }
-        }
-
-        function loadImport() {
-            hideAll();
-            document.getElementById("adminImport").style.display = "block";
-        }
-
-    </script>
-
 </body>
 
 </html>
