--- a/flaskr/templates/adminimport.html
+++ b/flaskr/templates/adminimport.html
@@ -48,9 +48,10 @@
         <div class="col-1"></div>
         <div class="col-10">
             <form method="POST" enctype="multipart/form-data">
-                <input type="file" name="fileUpload" />
+                <input type="file" name="fileUploadCQ" />
                 <input type="submit" name="submit" value="Upload Course Quota" />
                 <div id="dvCSV"></div>
+            </form>
         </div>
         <div class="col-1"></div>
     </div>
@@ -67,9 +68,10 @@
         <div class="col-1"></div>
         <div class="col-10">
             <form method="POST" enctype="multipart/form-data">
-                <input type="file" name="fileUpload" />
+                <input type="file" name="fileUploadC" />
                 <input type="submit" name="submit" value="Upload TA Cohort" />
                 <div id="dvCSV"></div>
+            </form>
         </div>
         <div class="col-1"></div>
     </div>
@@ -108,5 +110,11 @@
         <div class="col-1"></div>
     </div>
 </body>
+
+<script>
+    function dispfilename() {
+        
+    }
+</script>
 
 </html>
