--- a/flaskr/templates/adminimport.html
+++ b/flaskr/templates/adminimport.html
@@ -23,12 +23,8 @@
     <div class="row" style="background:#b2e1d4; height:auto">
         <div class="col-1"></div>
         <div class="col-10" style="align-items:center; padding: 10px;">
-            <a href="{{ url_for('admin.update') }}">
-                <font size="4"><b>UPDATE TA INFO&emsp;&emsp;</b></font>
-            </a>
-            <a href="{{ url_for('admin.info') }}">
-                <font size="4"><b>TA/COURSE INFO<b>&emsp;&emsp;</b></font>
-            </a>
+            <a href="{{ url_for('admin.info') }}"><font size="4"><b>TA/COURSE INFO<b>&emsp;&emsp;</b></font></a>
+            <a href="{{ url_for('admin.update') }}"><font size="4"><b>UPDATE TA INFO&emsp;&emsp;</b></font></a>
             <a href="{{ url_for('admin.adminimport') }}">
                 <font size="4"><b>IMPORT&emsp;&emsp;</b></font>
             </a>
